with box call feature 1.8 ip and boxcall checkbox

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ timeout: 20000,
 /*************************** First Pageone Device Ready Event *************************/
 $(document).ready(function(){
 //alert('onDevice ready');
-var string = device.platform;
+//var string = device.platform;
 
 console.log("Javascript start");
 var db = window.openDatabase("html5.db", "1.0", "PhoneGap Demo", 1000000);
